# diowwindowlist

./: CMakeLists.txt  Makefile.in  README.md  configure
src/: configsgen.c  create-shm.c  create-shm.h  diowwindowlist.c  generate-icon-cache.c  generate-icon-cache.h  getstrfromsubstrinfile.c  getstrfromsubstrinfile.h  getvaluefromconf.c  getvaluefromconf.h  wlr_layer_shell_v1.h
